--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +23,62 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="GSH-g4-Fru">
+                                <rect key="frame" x="-16" y="0.0" width="407" height="145"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="QZQ-L0-LrG">
+                                <rect key="frame" x="129" y="141" width="116" height="116"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="QZQ-L0-LrG" secondAttribute="height" multiplier="1:1" id="gik-kP-LgZ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Albert Einstein" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guQ-ec-FrT">
+                                <rect key="frame" x="74" y="270" width="204" height="53"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.85584944190000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="topMargin" secondItem="GSH-g4-Fru" secondAttribute="top" id="3cD-jA-xh8"/>
+                            <constraint firstItem="QZQ-L0-LrG" firstAttribute="top" secondItem="GSH-g4-Fru" secondAttribute="bottom" multiplier="0.75" constant="32.25" id="4em-Fp-8rg"/>
+                            <constraint firstItem="guQ-ec-FrT" firstAttribute="top" secondItem="QZQ-L0-LrG" secondAttribute="bottom" constant="13" id="6Pl-bK-z2k"/>
+                            <constraint firstItem="GSH-g4-Fru" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" constant="16" id="C18-8X-0Dp"/>
+                            <constraint firstItem="GSH-g4-Fru" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="25" constant="-16530" id="OMc-wb-2Po"/>
+                            <constraint firstItem="GSH-g4-Fru" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-16" id="RL9-GY-Xll"/>
+                            <constraint firstItem="QZQ-L0-LrG" firstAttribute="height" secondItem="GSH-g4-Fru" secondAttribute="height" multiplier="0.7" constant="14.5" id="grC-BV-jfe"/>
+                            <constraint firstItem="QZQ-L0-LrG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="og4-lT-6JC"/>
+                            <constraint firstItem="guQ-ec-FrT" firstAttribute="centerX" secondItem="QZQ-L0-LrG" secondAttribute="centerX" constant="-11" id="yr9-om-q1U"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="QZQ-L0-LrG" id="Fe4-AG-kcw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="pz7-Ed-Evb">
+            <objects>
+                <viewController id="giS-e3-RQA" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Trt-JZ-ngK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tFp-YS-Urf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+        </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
